include/pitangus/microsped.h

/**
 * \brief Gera ID de lote com suporte a atraso informado em microsegundos.
 * \param id ID sequencial com 15 caracteres.
 * \param usegs Atraso em microsegundos.
 * \note Esta função é thread-safe.
 */
MSPED_EXTERN void msped_gerar_id_lote_sleep(char *id, useconds_t usegs);
/**
 * \brief Gera ID de lote com atraso de 100000 microsegundos.
 * \param id ID sequencial com 15 caracteres.
 * \note Esta função é thread-safe.
 */
MSPED_EXTERN void msped_gerar_id_lote(char *id);
/**
 * \brief Gera data e hora no formato AAAA-MM-DDThh:mm:ssTZD (UTC).
 * \return data e hora no formato UTC.
 * \warning O chamador da função **deve** liberar a string retornada.
 */
MSPED_EXTERN char *msped_data_hora_utc();
/**
 * \brief Limpa mensagem de web service.
 * \param msg Mensagem em string.
 * \return Mensagem limpa.
 * \warning O chamador da função **deve** liberar a string retornada.
 */
MSPED_EXTERN char *msped_limpar_mensagem(const char *msg);
/**
 * \brief Limpa o XML após adição do protocolo.
 * \param proc_xml String de entrada.
 * \return XML limpo.
 * \warning O chamador da função **deve** liberar a string retornada.
 */
MSPED_EXTERN char *msped_limpar_prot(const char *proc_xml);
/**
 * \brief Limpa encoding e strings vazias de um XML.
 * \param xml XML de entrada.
 * \param rem_enc **true** para remover encoding.
 * \return XML sem encoding.
 * \warning O chamador da função **deve** liberar a string retornada.
 */
MSPED_EXTERN char *msped_limpar_xml(const char *xml, bool rem_enc);
/**
 * \brief Converte string para inteiro.
 * \param str String de entrada.
 * \return Inteiro convertido.
 */
MSPED_EXTERN long msped_static_str_to_long(const char *str);
/**
 * \brief Converte string para inteiro liberando automaticamente a string passada por parâmetro.
 * \param str String de entrada.
 * \return Inteiro convertido.
 */
MSPED_EXTERN long msped_str_to_long(char *str);