bindings/pascal/microsped/libmicrosped.pas


procedure msped_gerar_id_lote_sleep(const id: pcchar; usegs: cuseconds_t); cdecl; external LIB_NAME;

procedure msped_gerar_id_lote(const id: pcchar); cdecl; external LIB_NAME;

function msped_data_hora_utc: pcchar; cdecl; external LIB_NAME;

function msped_limpar_mensagem(const msg: pcchar): pcchar; cdecl; external LIB_NAME;

function msped_limpar_prot(const proc_xml: pcchar): pcchar; cdecl; external LIB_NAME;

function msped_limpar_xml(const xml: pcchar; rem_enc: cbool): pcchar; cdecl; external LIB_NAME;

function msped_static_str_to_long(const str: pcchar): clong; external LIB_NAME;

function msped_str_to_long(str: pcchar): clong; external LIB_NAME;

implementation

end.
